# advent-of-code

./: Cargo.toml
.github/workflows/: rust.yml
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs
