[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
authors = ["roberto@keltia.net"]

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
array-macro = "2.1"
itertools = "0"
serde = { version = "1.0", features = ["derive"] }
nom = "7.1"

